<resources>
    <string name="app_name">Piramid Null</string>
    <string name="loading_description">Image for Loading Page</string>
    <string name="login_description">Logo</string>
    <string name="loginTitle1">Piramid Null</string>
    <string name="loginTitle2">Game Assistant</string>
    <string name="loginDescription">YOUR GUIDE THROUGH  \nTHE UNKNOWN</string>
    <string name="loginText">Step into the role of Dr. Alan Robwelizer - the piramid`s secrets await.</string>
    <string name="createAccount">Create Account</string>
    <string name="singIn">Sign In</string>
    <string name="welcomeBack">Welcome Back!</string>
    <string name="arrowDescription">Back Arrow</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rememberMe">Remember Me</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="notesDescription">Navigation Notes Icon</string>
    <string name="profileDescription">Navigation Profile Icon</string>
    <string name="mainDescription">Navigation Main Icon</string>
    <string name="bioDescription">Navigation Biography Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    laser page-->
    <string name="laserPageTitle">Laser Room</string>
    <!--    maze page-->
    <string name="mazePageTitle">Maze Room</string>
    <string name="mazeToolBox">Tools</string>
    <string name="mazeGuide1">You have discovered a rough sketch of the maze. Use the tools to guide you through the maze.</string>
    <string name="continueBtn">Continue</string>
    <string name="mazeGuide2">Drag and drop to mark dead ends or the right path.</string>
    <string name="mazeGuide3_undo">If you made a mistake, use the undo button.</string>
    <string name="mazeGuide3_hint">If you really can not find your way out, the hint points you in the right direction.</string>
    <!--    findings page-->
    <string name="findingsPageTitle">Research Findings</string>
    <string name="objectsBtn">Artefacts</string>
    <string name="notesBtn">Field Notes</string>
    <string name="category1">Found: </string>
    <string name="category2">Origin: </string>
    <string name="category3">Date: </string>
    <string name="category4">Function: </string>
    <string name="category5">Story: </string>
    <string name="boxCategory1">Artefact: </string>
    <string name="boxCategory2">Object#: </string>
    <string name="boxCategory3">Type: </string>
    <string name="boxCategory4">Size: </string>






</resources>