<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginPage"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_bg"
    tools:context=".LoginPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/loginTitle"
        android:gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_marginEnd="5dp"
            android:id="@+id/loginTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/loginTitle1"
            android:textColor="@color/dark_gold"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/loginTitle2"
            app:layout_constraintHorizontal_bias="0.936"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/loginTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/loginTitle2"
            android:textColor="@color/sand"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.677"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <ImageView
        android:layout_gravity="center"
        android:id="@+id/loginImage"
        android:layout_width="230dp"
        android:layout_height="236dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/login_description"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="-100dp"
        android:layout_marginEnd="-5dp"
        android:padding="30dp"

        android:layout_marginBottom="-5dp"
        android:background="@drawable/square_with_rounded_corners">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:contentDescription="@string/arrowDescription"
                android:src="@drawable/arrow" />

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/sand"
                android:textSize="25sp"
                android:fontFamily="@font/poppins"
                android:text="@string/welcomeBack"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <EditText
                android:autofillHints="username"
                android:layout_gravity="center_horizontal"
                android:inputType="text"
                android:id="@+id/username"
                android:padding="10dp"
                android:lineSpacingExtra="0dp"
                android:includeFontPadding="false"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="20sp"
                android:background="@drawable/input"
                android:hint="@string/username"
                android:layout_width="350dp"
                android:textColorHint="@color/sand"
                android:textColor="@color/sand"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:autofillHints="password"
                android:layout_gravity="center_horizontal"
                android:inputType="textWebPassword"
                android:id="@+id/password"
                android:padding="10dp"
                android:lineSpacingExtra="0dp"
                android:includeFontPadding="false"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="20sp"
                android:background="@drawable/input"
                android:hint="@string/password"
                android:layout_width="350dp"
                android:textColorHint="@color/sand"
                android:layout_height="wrap_content"
                android:textColor="@color/sand"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/remember"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rememberMe"
                    android:checked="false"
                    android:buttonTint="@color/sand"
                    android:textColor="@color/sand"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgotPassword"
                    android:text="@string/forgotPassword"
                    android:textColor="@color/sand"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_medium" />
            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginBtn"
            android:text="@string/singIn"
            android:textSize="18sp"
            android:background="@drawable/login_page_btn"
            android:layout_marginTop="15dp"
            android:textColor="@color/light_bg"/>




    </LinearLayout>


</LinearLayout>