<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage"
    android:background="@color/dark_bg">

    <ImageView
        android:id="@+id/chatbotButton"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#D4AF37"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:src="@drawable/ic_female"
        android:elevation="8dp"
        android:contentDescription="Open Game Guide Bot"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/roomSlider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/dotsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/roomSlider"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navigation"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_margin="30dp"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/navigation_notes"
            android:layout_weight="1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/notes"
            android:contentDescription="@string/notesDescription" />

        <ImageView
            android:id="@+id/navigation_profile"
            android:layout_weight="1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/profile"
            android:contentDescription="@string/notesDescription" />

        <ImageView
            android:id="@+id/navigation_main"
            android:layout_weight="1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/main"
            android:contentDescription="@string/mainDescription" />

        <ImageView
            android:id="@+id/navigation_bio"
            android:layout_weight="1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/scroll"
            android:contentDescription="@string/bioDescription" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
