<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage"
    android:background="@color/dark_bg">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="24dp"
        android:layout_height="33dp"
        android:src="@drawable/arrow"
        app:layout_constraintBottom_toTopOf="@+id/slotGrid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

    <GridLayout
        android:id="@+id/slotGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alignmentMode="alignMargins"
        android:columnCount="3"
        android:padding="4dp"
        android:rowCount="1"
        android:layout_marginTop="200dp"
        android:rowOrderPreserved="false"
        app:layout_constraintBottom_toTopOf="@+id/cardGrid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <GridLayout
        android:id="@+id/cardGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="156dp"
        android:alignmentMode="alignMargins"
        android:columnCount="7"
        android:rowCount="3"
        android:padding="4dp"
        android:rowOrderPreserved="false"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/navigation"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/navigation"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_margin="30dp"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_weight="1"
                android:id="@+id/navigation_notes"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:src="@drawable/notes"
                android:contentDescription="@string/notesDescription"/>

            <ImageView
                android:id="@+id/navigation_profile"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:src="@drawable/profile"
                android:contentDescription="@string/notesDescription"/>

            <ImageView
                android:id="@+id/navigation_main"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:src="@drawable/main"
                android:contentDescription="@string/mainDescription"/>

            <ImageView
                android:id="@+id/navigation_bio"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:src="@drawable/scroll"
                android:contentDescription="@string/bioDescription"/>
        </LinearLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>